--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -1,5 +1,5 @@
 {% extends "base-page.html" %}
-{% block title %}{{ SITENAME }} - {{ page.title }}{% endblock %}
+{% block title %}{{ page.title }} - {{ SITENAME }}{% endblock %}
 {% block content %}
 <section id="content" class="body">
     <h2 class="content-title">
